Fix: Ahora funciona las url de api-gateway con keycloak. Hay que buscar una manera de hacer un script para que se cree el realm, el cliente metamapa-frontend, que se configue el SSO, etc.